--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "my resume",
   "main": "components/main.jsx",
   "scripts": {
-    "build-js": "browserify -t [ babelify --presets [ react ] ] components/main.jsx -o bundle.js",
-    "build": "npm run build-js"
+    "build-js": "browserify -t [ babelify --presets [ react ] ] src/components/main.jsx -o bundle.js",
+    "build": "npm run build-js",
+    "build-static": "node ./build-static.js"
   },
   "repository": {
     "type": "git",
@@ -24,12 +25,13 @@
   },
   "dependencies": {
     "react-dom": "~0.14.7",
-    "react": "~0.14.7"
+    "react": "~0.14.7",
+    "node-jsx": "~0.13.3"
   },
   "devDependencies": {
     "babelify": "~7.2.0",
     "babel-preset-react": "~6.5.0",
     "browserify": "~13.0.0",
-    "browserify-shim": "~3.8.12"
+    "fs-extra": "~0.26.5"
   }
 }
