--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "my resume",
   "main": "components/main.jsx",
   "scripts": {
-    "build-js": "browserify -t [ babelify --presets [ react ] ] src/components/main.jsx -o bundle.js",
+    "build-js": "browserify -t [ babelify --presets [ react ] ] src/components/main.jsx -o dynamic-website/bundle.js",
     "build": "npm run build-js",
     "build-static": "node ./build-static.js"
   },
@@ -26,7 +26,10 @@
   "dependencies": {
     "react-dom": "~0.14.7",
     "react": "~0.14.7",
-    "node-jsx": "~0.13.3"
+    "node-jsx": "~0.13.3",
+    "leaflet": "~0.7.7",
+    "react-leaflet": "~0.10.0",
+    "nominatim": "~0.1.0"
   },
   "devDependencies": {
     "babelify": "~7.2.0",
