--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "leaflet": "~0.7.7",
     "react-leaflet": "~0.10.0",
     "nominatim": "~0.1.0",
-    "leaflet-routing-machine": "~2.6.2"
+    "leaflet-routing-machine": "~2.6.2",
+    "jquery": "~2.2.0"
   },
   "devDependencies": {
     "babelify": "~7.2.0",
