--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "my resume",
   "main": "components/main.js",
   "scripts": {
-    "build-js": "browserify -t [ babelify --presets [ react es2015 ] ] src/components/main.js -o dynamic-website/bundle.js",
+    "build-js": "browserify -t [ babelify --presets [ react es2015 ] ] src/components/main.js | uglifyjs >  dynamic-website/bundle.js",
     "build": "npm run build-js",
     "build-static": "node ./build-static.js"
   },
@@ -38,6 +38,7 @@
     "babel-preset-react": "~6.5.0",
     "browserify": "~13.0.0",
     "fs-extra": "~0.26.5",
-    "babel-preset-es2015": "~6.5.0"
+    "babel-preset-es2015": "~6.5.0",
+    "uglify-js": "~2.6.1"
   }
 }
