--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "my resume",
   "main": "components/main.js",
   "scripts": {
-    "build-js": "browserify -t [ babelify --presets [ react es2015 ] ] src/components/main.js | uglifyjs >  dynamic-website/bundle.js",
-    "build": "npm run build-js",
-    "build-static": "node ./build-static.js"
+    "build": "gulp"
   },
   "repository": {
     "type": "git",
@@ -26,9 +24,7 @@
   "dependencies": {
     "react-dom": "~0.14.7",
     "react": "~0.14.7",
-    "node-jsx": "~0.13.3",
     "leaflet": "~0.7.7",
-    "react-leaflet": "~0.10.0",
     "nominatim": "~0.1.0",
     "leaflet-routing-machine": "~2.6.2",
     "jquery": "~2.2.0"
@@ -37,8 +33,16 @@
     "babelify": "~7.2.0",
     "babel-preset-react": "~6.5.0",
     "browserify": "~13.0.0",
-    "fs-extra": "~0.26.5",
     "babel-preset-es2015": "~6.5.0",
-    "uglify-js": "~2.6.1"
+    "gulp": "~3.9.1",
+    "gulp-minify-html": "~1.0.5",
+    "gulp-uglify": "~1.5.2",
+    "gulp-react": "~3.1.0",
+    "gulp-html-replace": "~1.5.5",
+    "vinyl-source-stream": "~1.1.0",
+    "watchify": "~3.7.0",
+    "gulp-streamify": "~1.0.2",
+    "babel-register": "~6.5.2",
+    "babel-core": "~6.5.2"
   }
 }
