--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "watchify": "~3.7.0",
     "gulp-streamify": "~1.0.2",
     "babel-register": "~6.5.2",
-    "babel-core": "~6.5.2"
+    "babel-core": "~6.5.2",
+    "fs-extra": "~0.26.5"
   }
 }
