--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "leaflet": "~0.7.7",
     "leaflet-routing-machine": "~2.6.2",
     "nominatim": "~0.1.0",
-    "jquery": "~2.2.0"
+    "jquery": "~2.2.0",
+    "react-bootstrap": "~0.28.5",
+    "react-router": "~2.0.1",
+    "react-router-bootstrap": "~0.20.1"
   },
   "devDependencies": {
     "babelify": "~7.2.0",
