--- a/src/static/projects.json
+++ b/src/static/projects.json
@@ -182,9 +182,9 @@
         "year": "2007"
       },
       "text": {
-        "headline": "TT-SIB 5 / ASB 2005",
+        "headline": "TT-SIB 5 und ASB 2005 (Netz, Bestand)",
         "role": [ "Entwickler", "Architekt" ],
-        "text": "Umsetzung einer Mehrschichtenarchitektur für die TT-SIB. Ich konnte die Architektur des Gesamtsystems entwerfen und war auch für den maßgeblichen Teil der Umsetzung verantwortlich. Die maßgeblichen Technologien waren Java EE (z.B. Servlets, JAXB), Spring Framework, Hibernate, SOAP."
+        "text": "Mit der Umsetzung des Projektes wurde die TT-SIB auf eine Mehrschichtenarchitektur umgestellt und gleichzeitig an die aktuellen Regelwerke angepasst. Die bislang ausschließlich im Client und in der Datenbank enthaltene Fachlogik wurde als eigenständige Dienste bereitgestellt. Ich konnte die Architektur des Gesamtsystems entwerfen und auch maßgeblich zur Umsetzung beitragen. Die wesentlichen Technologien waren Java EE (z.B. Servlets, JAXB), Spring Framework, Hibernate, SOAP. Als Laufzeitumgebung wurde der Apache Tomcat verwendet."
       }
     },
     {
@@ -206,7 +206,7 @@
       "text": {
         "headline": "XVemags Unterstützung für NOVALAST",
         "role": ["Entwickler", "Projektleiter"],
-        "text": "Realisierung der XVemags Schnittstelle für NOVALAST. VEMAGS ist das bundesweite Verfahrensmanagement für Großraum- und Schwerlasttransporte (http://www.vemags.de). Zur Anbindung von Drittsystemen wird eine XÖV / auf OSCI Tranport basierende Schnittstelle angeboten. NOVALAST war das erste Drittsystem für die fachliche Prüfung. Die Lösung wurde am Stand der Hessischen Straßenbauverwaltung (heute Hessen Mobil) auf der Cebit präsentiert."
+        "text": "Im Rahmen des Projektes wurde die XVemags Schnittstelle für NOVALAST realisiert. VEMAGS ist das bundesweite Verfahrensmanagement für Großraum- und Schwerlasttransporte (http://www.vemags.de). Zur Anbindung von Drittsystemen wird eine OSCI Tranport basierende Schnittstelle (XVemags) angeboten. Die Pflege des Standards erfolgt über die Koordinierungsstelle für IT-Standards (KoSIT) als 'XML Standard in der öffentlichen Verwaltung' (XÖV). NOVALAST war das erste Drittsystem für die fachliche Prüfung. Die Lösung konnte ich am Stand der Hessischen Straßenbauverwaltung (heute Hessen Mobil) auf der Cebit präsentiert."
       }
     },
     {
@@ -226,9 +226,10 @@
         "year": "2009"
       },
       "text": {
-        "headline": "TT-SIB LRVN (Landesradverkehrswegenetz)",
+        "headline": "TT-SIB LRVN (Landesradverkehrsnetz)",
         "role": ["Projektleiter"],
-        "text": "Umsetzung des RCP Clients für das Landesradverkehrsnetz Sachsen-Anhalts. Aufgabe war die Umsetzung der Masken für die alphanumerische Darstellung und Pflege der Bestandsdaten für das Radwegenetz. Zusätzlich erfolgte die Integration einer interaktiven Karte und von verschiedenen Auswertungen. Grundlage dafür bildeten die Webdienste der TT-SIB 5. Meine Aufgabe war die Leitung des fünfköpfigen Projektteams und der Entwurf der Architektur des Gesamtsystems."
+        "text": ["Umsetzung des RCP Clients für das Landesradverkehrsnetz Sachsen-Anhalts. Aufgabe war die Umsetzung der Masken für die alphanumerische Darstellung und Pflege der Bestandsdaten für das Radwegenetz. Zusätzlich erfolgte die Integration einer interaktiven Karte und von verschiedenen Auswertungen. Grundlage dafür bildeten die Webdienste der TT-SIB 5. Meine Aufgabe war die Leitung des fünfköpfigen Projektteams und der Entwurf der Architektur des Gesamtsystems.",
+          "Das Projekt war ein Teilprojekt für die Entwicklung des Landesradverkehrsplans in Sachsen-Anhalt."]
       }
     },
     {
@@ -248,9 +249,10 @@
         "year": "2011"
       },
       "text": {
-        "headline": "Anpassung von NOVALAST an die neue RGST / den VEMAGS Statik Rechenkern",
+        "headline": "Anpassung von NOVALAST an die neue RGST und den VEMAGS Statik Rechenkern",
         "role": ["Projektleiter"],
-        "text": "Der Genehmigungsprozess für Großraum- und Schwerlasttransporte erfolgte auf Basis der RGST 92 und der DIN 1072. Dies war auch die Grundlage für NOVALAST. Im Rahmen des Projektes wurde die Anbindung eines neueren Rechenkerns zur besseren Unterstützung der neuen DIN FB 101 (VEMAGS Statik) und der angepasst RGST 2013 realisiert. Ich war als Projektleiter für die Erstellung der Pflichtenhefte und die Realisierung verantwortlich."
+        "text": [ "Grundlage für den Genehmigungsprozess für Großraum- und Schwerlasttransporte sind u.a. die RGST 92 und die DIN 1072. Diese Regelwerke waren auch die fachliche Basis für die Entwicklung von NOVALAST. Im Rahmen des Projektes wurde die Unterstützung der aktualisierten Regelwerke (DIN FB 101, RGST 2013) und die Anbindung eines neuen Rechenkerns zur statischen Prüfung von Brückenbauwerken (VEMAGS Statik) realisiert. Ich konnte als Projektleiter in Absprache mit den Experten die Pflichtenhefte erstellen und in der Realisierungsphase das Projektteam unterstützen.",
+          "Die fachliche Umsetzung erfolgte in enger Zusammenarbeit mit dem damaligen Leiter der Fachgruppe VEMAGS Statik. Die Ergebnisse haben wir im Rahmen des 5. OKSTRA Symposiums gemeinsam vorgestellt." ]
       }
     },
     {
@@ -294,7 +296,7 @@
       "text": {
         "headline": "Forschungsprojekt Integriertes Straßeninformationssystem (2013 FE 0099)",
         "role": ["Projektleiter"],
-        "text": "Dieses mit Mitteln des Europäischen Fonds für regionale Entwicklung (EFRE) geförderte Forschungsprojekt hat ein Team von 9 Mitarbeitern zusammen mit mir als Projektleiter realisiert. Thema war die Realisierung einer neuartigen Oberfläche für die systemunabhängige Verfügbarkeit der Bestandsdaten innerhalb der Straßeninformationsbank. Ziel war die bessere Bereitstellung dieser Daten für die strategische Planung sowie den Betrieb der Straßen des überörtlichen Verkehrs. Die Ergebnisse des Projektes konnte ich im Rahmen des 6. OKSTRA Symposiums am 21.05.2015 einem Fachpublikum präsentieren."
+        "text": "Dieses mit Mitteln des Europäischen Fonds für regionale Entwicklung (EFRE) geförderte Forschungsprojekt hat ein Team von 9 Mitarbeitern zusammen mit mir als Projektleiter umgesetzt. Thema war die Realisierung einer neuartigen Oberfläche für die systemunabhängige Verfügbarkeit der Bestandsdaten innerhalb der Straßeninformationsbank. Das Projekt zeigte auf, wie die Bestandsdaten des überörtlichen Verkehrs in einer modernen Weboberfläche präsentiert und fortgeschrieben werden können. Durch die Verknüpfung der verschiedenen Fachinformationssysteme wird eine verbesserte strategische Planung und ein effizienterer Betrieb der Straßen des überörtlichen Verkehrs erreicht. Die Ergebnisse des Projektes konnte ich im Rahmen des 6. OKSTRA Symposiums am 21.05.2015 einem Fachpublikum präsentieren."
       }
     },
     {
@@ -312,9 +314,9 @@
         "headline": "TT-SIB INFOSYS 8",
         "role": ["Entwickler", "Architekt", "Projektleiter"],
         "text": [
-          "Mit INFOSYS 8 wirke ich an der Realisierung eines neuen WebClients auf Basis der TT-SIB 5 mit. Die technologische Umsetzung erfolgt auf Basis der Eclipse RAP Plattform und damit innerhalb der OSGI Runtime (Equinox).",
-          "Teile der Anwendung werden nativ in HTML 5 / Javascript realisiert. Dazu gehört z.B. die interaktive Karte auf Basis von Openlayers oder die schematische Darstellung von Straßendaten mit SVG. ",
-          "Ich arbeite maßgeblich an der Architektur mit und unterstütze das sechsköpfige Entwicklerteam bei der Realisierung. Für Teilprojekte bin ich als Projektleiter verantwortlich."
+          "Mit INFOSYS 8 wirke ich an der Realisierung eines neuen WebClients auf Basis der TT-SIB 5 mit. Die technologische Umsetzung erfolgt auf Basis der Eclipse RAP Plattform und damit als OSGI Module. Zur Laufzeit wird Equinox verwendet.",
+          "Teile der Anwendung werden nativ in HTML 5 / Javascript realisiert. Dazu gehört z.B. die interaktive Karte auf Basis von Openlayers und die schematische Darstellung von Straßendaten mit SVG. ",
+          "Ich arbeite maßgeblich am Entwurf der Architektur mit und unterstütze das sechsköpfige Entwicklerteam bei der Realisierung. Für Teilprojekte helfe ich als Projektleiter dem Projektteam bei der Realisierung."
         ]
       }
     }
