--- a/src/static/projects.json
+++ b/src/static/projects.json
@@ -284,6 +284,28 @@
         "credit": ""
       },
       "start_date": {
+        "month": "5",
+        "day": "3",
+        "year": "2012"
+      },
+      "end_date": {
+        "month": "12",
+        "day": "31",
+        "year": "2014"
+      },
+      "text": {
+        "headline": "NOVATRANS",
+        "role": ["Projektleiter"],
+        "text": "Im Rahmen dieses Projektes wurde eine Spezialsoftware zur Unterstützung der internen Prozesse bei der GENOSK (http://www.genosk.de/) realisiert. Die Umsetzung erfolgte durch ein externes Entwicklerteam im europäischen Ausland (4 Personen). Ich habe mich um die Projektsteuerung und die Analyse und Dokumentation der fachlichen Anforderungen des Kunden gekümmert."
+      }
+    },
+    {
+      "media": {
+        "url": "",
+        "caption": "",
+        "credit": ""
+      },
+      "start_date": {
         "month": "10",
         "day": "17",
         "year": "2013"
