--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "jquery": "~2.2.0",
     "react-bootstrap": "~0.28.5",
     "react-router": "~2.0.1",
-    "react-router-bootstrap": "~0.20.1"
+    "react-router-bootstrap": "~0.20.1",
+    "react-linkify": "~0.1.1"
   },
   "devDependencies": {
     "babelify": "~7.2.0",
