--- a/package.json
+++ b/package.json
@@ -25,16 +25,16 @@
     "url": "https://github.com/ender74/resume/issues"
   },
   "dependencies": {
-    "react-dom": "~0.14.7",
-    "react": "~0.14.7",
+    "jquery": "~2.2.0",
     "leaflet": "~0.7.7",
     "leaflet-routing-machine": "~2.6.2",
     "nominatim": "~0.1.0",
-    "jquery": "~2.2.0",
+    "react": "~0.14.7",
     "react-bootstrap": "~0.28.5",
+    "react-dom": "~0.14.7",
+    "react-linkify": "~0.1.1",
     "react-router": "~2.0.1",
-    "react-router-bootstrap": "~0.20.1",
-    "react-linkify": "~0.1.1"
+    "react-router-bootstrap": "~0.20.1"
   },
   "devDependencies": {
     "babelify": "~7.2.0",
