--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-intl": "^2.0.1",
     "react-linkify": "~0.1.1",
     "react-router": "~2.0.1",
-    "react-router-bootstrap": "~0.20.1"
+    "react-router-bootstrap": "~0.20.1",
+    "react-tooltip": "^2.0.2"
   },
   "devDependencies": {
     "babelify": "~7.2.0",
