--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "url": "https://github.com/ender74/resume/issues"
   },
   "dependencies": {
+    "fetch-check-http-status": "^2.0.0",
     "intl": "^1.1.0",
     "jquery": "~2.2.0",
+    "keymirror": "^0.1.1",
     "leaflet": "~0.7.7",
     "leaflet-routing-machine": "~2.6.2",
     "nominatim": "~0.1.0",
@@ -34,11 +36,17 @@
     "react": "~0.14.7",
     "react-bootstrap": "~0.28.5",
     "react-dom": "~0.14.7",
-    "react-intl": "^2.0.1",
+    "react-intl": "^2.1.2",
+    "react-intl-redux": "0.0.9",
     "react-linkify": "~0.1.1",
+    "react-redux": "^4.4.5",
     "react-router": "~2.0.1",
     "react-router-bootstrap": "~0.20.1",
-    "react-tooltip": "^2.0.2"
+    "react-tooltip": "^2.0.2",
+    "redux": "^3.5.2",
+    "redux-thunk": "^2.1.0",
+    "redux-watch": "^1.1.1",
+    "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
     "babelify": "~7.2.0",
