--- a/package.json
+++ b/package.json
@@ -49,20 +49,21 @@
     "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
-    "babelify": "~7.2.0",
-    "babel-preset-react": "~6.5.0",
-    "browserify": "~13.0.0",
-    "babel-preset-es2015": "~6.5.0",
-    "gulp": "~3.9.1",
-    "gulp-minify-html": "~1.0.5",
-    "gulp-uglify": "~1.5.2",
-    "gulp-html-replace": "~1.5.5",
-    "vinyl-source-stream": "~1.1.0",
-    "watchify": "~3.7.0",
-    "gulp-streamify": "~1.0.2",
-    "babel-register": "~6.5.2",
     "babel-core": "~6.5.2",
+    "babel-preset-es2015": "~6.5.0",
+    "babel-preset-react": "~6.5.0",
+    "babel-register": "~6.5.2",
+    "babelify": "~7.2.0",
+    "browserify": "~13.0.0",
+    "gulp": "~3.9.1",
+    "gulp-html-replace": "~1.5.5",
+    "gulp-minify-html": "~1.0.5",
+    "gulp-streamify": "~1.0.2",
+    "gulp-template": "~3.1.0",
+    "gulp-uglify": "~1.5.2",
     "gulp-util": "~3.0.7",
-    "gulp-template": "~3.1.0"
+    "intl": "^1.2.4",
+    "vinyl-source-stream": "~1.1.0",
+    "watchify": "~3.7.0"
   }
 }
