--- a/package.json
+++ b/package.json
@@ -27,43 +27,43 @@
   "dependencies": {
     "fetch-check-http-status": "^2.0.0",
     "intl": "^1.1.0",
-    "jquery": "~2.2.0",
+    "jquery": "~3.2.1",
     "keymirror": "^0.1.1",
-    "leaflet": "~0.7.7",
-    "leaflet-routing-machine": "~2.6.2",
+    "leaflet": "~1.1.0",
+    "leaflet-routing-machine": "~3.2.5",
     "nominatim": "~0.1.0",
-    "radium": "^0.17.1",
-    "react": "~0.14.7",
-    "react-bootstrap": "~0.28.5",
-    "react-dom": "~0.14.7",
+    "radium": "^0.19.1",
+    "react": "~15.6.1",
+    "react-bootstrap": "~0.31.1",
+    "react-dom": "~15.6.1",
     "react-intl": "^2.1.2",
-    "react-intl-redux": "0.0.9",
-    "react-linkify": "~0.1.1",
-    "react-redux": "^4.4.5",
-    "react-router": "~2.0.1",
-    "react-router-bootstrap": "~0.20.1",
-    "react-tooltip": "^2.0.2",
+    "react-intl-redux": "0.6.0",
+    "react-linkify": "~0.2.1",
+    "react-redux": "^5.0.5",
+    "react-router": "~4.1.2",
+    "react-router-bootstrap": "~0.24.2",
+    "react-router-dom": "4.1.2",
+    "react-tooltip": "^3.3.0",
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0",
     "redux-watch": "^1.1.1",
-    "whatwg-fetch": "^1.0.0"
+    "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
-    "babel-core": "~6.5.2",
-    "babel-preset-es2015": "~6.5.0",
-    "babel-preset-react": "~6.5.0",
-    "babel-register": "~6.5.2",
-    "babelify": "~7.2.0",
-    "browserify": "~13.0.0",
+    "babel-core": "^6.25.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-register": "^6.24.1",
+    "babelify": "^7.3.0",
+    "browserify": "~14.4.0",
     "gulp": "~3.9.1",
-    "gulp-html-replace": "~1.5.5",
+    "gulp-html-replace": "~1.6.2",
     "gulp-minify-html": "~1.0.5",
     "gulp-streamify": "~1.0.2",
-    "gulp-template": "~3.1.0",
-    "gulp-uglify": "~1.5.2",
+    "gulp-template": "^4.0.0",
+    "gulp-uglify": "~3.0.0",
     "gulp-util": "~3.0.7",
-    "intl": "^1.2.4",
     "vinyl-source-stream": "~1.1.0",
-    "watchify": "~3.7.0"
+    "watchify": "^3.9.0"
   }
 }
